[package]
name = "unison_wasm"
version = "0.1.0"
authors = ["Jared Forsyth <jared@jaredforsyth.com>"]
description = "A Unison runtime, compiled to wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/jaredly/unison.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
base64 = ""
serde_json = ""
shared = { path = "../shared" }
wasm-logger = "0.2.0"
console_error_panic_hook = ""